--- a/.gitignore
+++ b/.gitignore
@@ -160,5 +160,27 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-dataset/test
-dataset/train
+# Исключить все файлы в папках, но сохранить сами папки
+dataset/test/*
+!dataset/test/.gitignore
+
+dataset/train/*
+!dataset/train/.gitignore
+
+raw_images/duodenum/*
+!raw_images/duodenum/.gitignore
+
+raw_images/esophagus/*
+!raw_images/esophagus/.gitignore
+
+raw_images/stomach/*
+!raw_images/stomach/.gitignore
+
+processing_images/duodenum/*
+!processing_images/duodenum/.gitignore
+
+processing_images/esophagus/*
+!processing_images/esophagus/.gitignore
+
+processing_images/stomach/*
+!processing_images/stomach/.gitignore
