--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,25 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+# Ignore all files inside these directories, but keep the directories
+dataset/test/*
+dataset/train/*
+raw_images/duodenum/*
+raw_images/esophagus/*
+raw_images/stomach/*
+processing_images/duodenum/*
+processing_images/esophagus/*
+processing_images/stomach/*
+
+# Allow the directories to be tracked
+!dataset/test/
+!dataset/train/
+!raw_images/duodenum/
+!raw_images/esophagus/
+!raw_images/stomach/
+!processing_images/duodenum/
+!processing_images/esophagus/
+!processing_images/stomach/
+
+# Ignore all files, but not the directories
+*.*
